force-app/main/default/objects/pse__Team__c/pse__Team__c.object-meta.xml
<CustomObject>
    <description>A group of resources who work together.</description>
    <label>Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>