force-app/main/default/objects/pse__Team__c/fields/pse__Enable_Swapping__c.field-meta.xml
<CustomField>
    <fullName>pse__Enable_Swapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to let team members swap shifts on the associated team schedule. This field is deselected by default.</description>
    <inlineHelpText>Select to let team members swap shifts on the associated team schedule. This field is deselected by default.</inlineHelpText>
    <label>Enable Swapping</label>
    <type>Checkbox</type>
</CustomField>