force-app/main/default/objects/pse__Team__c/fields/pse__Swap_Use_Custom_Template__c.field-meta.xml
<CustomField>
    <fullName>pse__Swap_Use_Custom_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the swap notification email uses the email template defined in the Custom Template Name (Swap) field.</description>
    <inlineHelpText>When true, the swap notification email uses the email template defined in the Custom Template Name (Swap) field.</inlineHelpText>
    <label>Use Custom Template (Swap)</label>
    <type>Checkbox</type>
</CustomField>