force-app/main/default/objects/pse__Team__c/fields/pse__Team_Owner__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The resource that owns the team.</description>
    <inlineHelpText>The resource that owns the team.</inlineHelpText>
    <label>Team Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team</relationshipLabel>
    <relationshipName>Team</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>